# remnawave-online-advisor

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
app/: __init__.py  api_client.py  bot.py  config.py  database.py  main.py  report.py  scheduler.py  stats.py
tests/: test_bot.py  test_config.py  test_database.py  test_report.py  test_stats.py
