[project]
name = "remnawave-online-advisor"
version = "0.1.0"
description = "Telegram bot that aggregates Remnawave node online stats and posts a daily report."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12,<4",
    "aiogram>=3.28,<4",
    "APScheduler>=3.11,<4",
    "pydantic>=2.11,<3",
    "pydantic-settings>=2.10,<3",
    "python-dotenv>=1.1,<2",
]

[dependency-groups]
dev = [
    "pytest>=8.4,<9",
    "pytest-asyncio>=1.0,<2",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
